--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-ATBS/ATBS-11_xkcd/*.png
-ATBS/ATBS-11_xkcd/*.jpg
-ATBS/ATBS-11_xkcd/*.gif
+ATBS-11_xkcd/*.png
+ATBS-11_xkcd/*.jpg
+ATBS-11_xkcd/*.gif
